Category select z-index fix

--- a/themes/mycatalog/src/css/main.css
+++ b/themes/mycatalog/src/css/main.css
@@ -447,6 +447,7 @@ main {
 
 .custom-select-container {
   position: relative;
+  z-index: 2;
   font-size: 23px;
   color: #ffffff; }
   .custom-select-container select {
